@@ -1,5 +1,10 @@
 $Id$
 
+2015-08-08  Christian Franke  <franke@computer.org>
+
+	os_win32.cpp: Fix get_os_version_str() for Windows >= 8.1.
+	Add Windows 10 Final.
+
 2015-08-02  Christian Franke  <franke@computer.org>
 
 	configure.ac: Remove '--disable-drivedb',
